--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/gatsby-inc/gatsby-demo-minimal#readme",
   "dependencies": {
     "gatsby": "^4.1.1",
+    "gatsby-source-contentful": "^7.22.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
