--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
   "homepage": "https://github.com/gatsby-inc/gatsby-demo-minimal#readme",
   "dependencies": {
     "gatsby": "^4.1.1",
+    "gatsby-env-variables": "^2.0.0",
+    "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-source-contentful": "^7.22.0",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-transformer-sharp": "^4.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
