--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby": "^4.1.1",
     "gatsby-env-variables": "^2.0.0",
     "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-manifest": "^4.24.0",
     "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-source-contentful": "^7.22.0",
     "gatsby-source-filesystem": "^4.24.0",
