--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-source-contentful": "^7.22.0",
     "gatsby-source-filesystem": "^4.24.0",
     "gatsby-transformer-sharp": "^4.24.0",
+    "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
